# tree-sitter-bdl

./: .prettierrc  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-bdl.pc.in
bindings/c/tree_sitter/: tree-sitter-bdl.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_bdl/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterbdlTests/: TreeSitterbdlTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: primitives.txt  statements.txt
test/highlight/: example.bdl
